{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 59,
  "lineage": "ead897c6-698c-ef55-33b1-b42b695a464b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507676015690:vpc/vpc-0ff2e0568f7d52014",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f38d802fa27dfcbb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-088d7083aa2c75f51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff2e0568f7d52014",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4120413230a9bed",
            "owner_id": "507676015690",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0976e18ea0680aa6d",
            "association_id": "eipassoc-0bf9f3443c0394d6e",
            "domain": "vpc",
            "id": "eipalloc-0976e18ea0680aa6d",
            "instance": "i-02492d451ca5b6a1c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01952583b88b440de",
            "private_dns": "ip-172-31-20-234.ec2.internal",
            "private_ip": "172.31.20.234",
            "public_dns": "ec2-34-224-232-135.compute-1.amazonaws.com",
            "public_ip": "34.224.232.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "eip-0",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507676015690:security-group/sg-0ed8d2e4398f1e570",
            "description": "SG for test project for Hillel",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow egress for all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed8d2e4398f1e570",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.204.137.212/32"
                ],
                "description": "Allow HTTP for me",
                "from_port": 8181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8181
              },
              {
                "cidr_blocks": [
                  "89.204.137.212/32"
                ],
                "description": "Allow SSH for me",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hillel-lesson26-sg",
            "name_prefix": "",
            "owner_id": "507676015690",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Hillel": "Lesson 26",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff2e0568f7d52014"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507676015690:security-group-rule/sgr-09a969d2c6847f6b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow egress for all",
            "from_port": null,
            "id": "sgr-09a969d2c6847f6b6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed8d2e4398f1e570",
            "security_group_rule_id": "sgr-09a969d2c6847f6b6",
            "tags": null,
            "tags_all": {
              "Hillel": "Lesson 26",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507676015690:security-group-rule/sgr-07a068c283d23ea7e",
            "cidr_ipv4": "89.204.137.212/32",
            "cidr_ipv6": null,
            "description": "Allow HTTP for me",
            "from_port": 8181,
            "id": "sgr-07a068c283d23ea7e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed8d2e4398f1e570",
            "security_group_rule_id": "sgr-07a068c283d23ea7e",
            "tags": null,
            "tags_all": {
              "Hillel": "Lesson 26",
              "Terraform": "true"
            },
            "to_port": 8181
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "data.aws_vpc.this",
            "data.external.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507676015690:security-group-rule/sgr-008b677ef937b5a31",
            "cidr_ipv4": "89.204.137.212/32",
            "cidr_ipv6": null,
            "description": "Allow SSH for me",
            "from_port": 22,
            "id": "sgr-008b677ef937b5a31",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed8d2e4398f1e570",
            "security_group_rule_id": "sgr-008b677ef937b5a31",
            "tags": null,
            "tags_all": {
              "Hillel": "Lesson 26",
              "Terraform": "true"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "data.aws_vpc.this",
            "data.external.my_ip"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0806bc468ce3a22ec",
            "arn": "arn:aws:ec2:us-east-1:507676015690:instance/i-02492d451ca5b6a1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02492d451ca5b6a1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hillel-gr",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01952583b88b440de",
            "private_dns": "ip-172-31-20-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.234",
            "public_dns": "ec2-34-224-232-135.compute-1.amazonaws.com",
            "public_ip": "34.224.232.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a7eba3f53a2e344",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0886fc2ca0c2353b9",
            "tags": {
              "Name": "hillel-server"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "hillel-server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0238978de9610e5b5"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.amazonlinux2"
          ]
        }
      ]
    }
  ]
}